--- a/management/univention-directory-manager-modules/debian/changelog
+++ b/management/univention-directory-manager-modules/debian/changelog
@@ -1,3 +1,9 @@
+univention-directory-manager-modules (9.0.70-1) unstable; urgency=low
+
+  * minor change of settings/extended_attribute layout (Bug #28629)
+
+ -- Lukas Walter <walter@univention.de>  Wed, 23 Oct 2013 18:35:30 +0200
+
 univention-directory-manager-modules (9.0.69-3) unstable; urgency=low
 
   * More improvements to share module texts and layout (Bug #32882)
