--- a/management/univention-directory-manager-modules/modules/univention/admin/handlers/settings/de.po
+++ b/management/univention-directory-manager-modules/modules/univention/admin/handlers/settings/de.po
@@ -29,7 +29,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: univention-directory-manager-modules 6.0.100\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2013-10-15 12:43+0200\n"
+"POT-Creation-Date: 2013-10-23 16:15+0200\n"
 "PO-Revision-Date: 2011-12-01 09:47+0100\n"
 "Last-Translator: Philipp Hahn <hahn@univention.de>\n"
 "Language-Team: German <de@li.org>\n"
@@ -215,11 +215,11 @@ msgstr "Eindeutiger Name"
 
 #: extended_attribute.py:53
 msgid ""
-"Name which by default is used by UDM CLI and internally to "
-"identify the extended attribute"
+"Name which by default is used by UDM CLI and internally to identify the "
+"extended attribute"
 msgstr ""
-"Name der standardmäßig vom UDM-CLI und intern zur "
-"Identifizierung des erweiterten Attributs verwendet wird"
+"Name der standardmäßig vom UDM-CLI und intern zur Identifizierung des "
+"erweiterten Attributs verwendet wird"
 
 #: extended_attribute.py:63 extended_attribute.py:377
 msgid "Short description"
@@ -278,17 +278,18 @@ msgstr "Syntax-Name"
 msgid ""
 "When values are entered, the UMC performs a syntax check. Apart from "
 "standard syntax definitions (string) and (integer), there are three "
-"possibilities for expressing a binary condition. The syntax TrueFalse "
-"is represented at LDAP level using the strings true and false, the syntax "
-"TrueFalseUppercorresponds to the OpenLDAP boolean values TRUE and FALSE "
-"and the syntax boolean does not save any value or the string 1"
+"possibilities for expressing a binary condition. The syntax TrueFalse is "
+"represented at LDAP level using the strings true and false, the syntax "
+"TrueFalseUppercorresponds to the OpenLDAP boolean values TRUE and FALSE and "
+"the syntax boolean does not save any value or the string 1"
 msgstr ""
 "Bei der Eingabe von Werten nimmt die UMC eine Syntaxprüfung vor. Neben "
 "Standard-Syntaxdefinitionen für Zeichenketten (string), Zahlen (integer) "
 "gibt es drei Möglichkeiten einen binären Zustand auszudrücken: Die Syntax "
-"TrueFalse wird auf LDAP-Ebene durch die Zeichenketten true und false abgebildet, "
-"die Syntax TrueFalseUpper verwendet dagegen die Werte TRUE und FALSE. Die Syntax "
-"boolean dagegen speichert keinen Wert bzw. die Zeichenkette 1"
+"TrueFalse wird auf LDAP-Ebene durch die Zeichenketten true und false "
+"abgebildet, die Syntax TrueFalseUpper verwendet dagegen die Werte TRUE und "
+"FALSE. Die Syntax boolean dagegen speichert keinen Wert bzw. die "
+"Zeichenkette 1"
 
 #: extended_attribute.py:137
 msgid "Hook class"
@@ -426,19 +427,19 @@ msgid ""
 "In some cases it is useful to overwrite predefined input fields with "
 "extended attributes. If the internal UDM name of an attribute is configured "
 "here, its  input field is overwritten by this extended attribute. The UDM "
-"attribute name can only be determined by searching within "
-"/usr/share/pyshared/univention/admin/handlers directory. It is the name which "
-"comes before the colon in the declarations of univention.admin.property objects, "
-"e.g., roomNumber for a  user's room number"
+"attribute name can only be determined by searching within /usr/share/"
+"pyshared/univention/admin/handlers directory. It is the name which comes "
+"before the colon in the declarations of univention.admin.property objects, e."
+"g., roomNumber for a  user's room number"
 msgstr ""
 "In einigen Fällen ist es sinnvoll, vorgegebene Eingabefelder mit erweiterten "
 "Attributen zu überschreiben. Wird hier der interne UDM-Name eines Attributs "
 "konfiguriert, wird dessen Eingabefeld von diesem erweiterten Attribut "
 "überschrieben. Der UDM-Attributname kann nur durch eine Suche unterhalb des "
 "Verzeichnisses /usr/share/pyshared/univention/admin/handlers/ ermittelt "
-"werden. Es handelt sich dabei um den Namen, der in den Deklarationen von"
-"univention.admin.property-Objekten vor dem Doppelpunkt steht, "
-"z.B. roomNumber für die Raumnummer eines Benutzers"
+"werden. Es handelt sich dabei um den Namen, der in den Deklarationen "
+"vonunivention.admin.property-Objekten vor dem Doppelpunkt steht, z.B. "
+"roomNumber für die Raumnummer eines Benutzers"
 
 #: extended_attribute.py:248
 msgid "Span both columns"
@@ -455,6 +456,21 @@ msgstr ""
 #: extended_attribute.py:258
 msgid "LDAP attribute"
 msgstr "LDAP-Attribut"
+
+#: extended_attribute.py:259 extended_attribute.py:300
+msgid ""
+"Univention Corporate Server provides its own LDAP scheme for customer "
+"extensions. The LDAP object class univentionFreeAttributes can be used for "
+"extended attributes without restrictions. It offers 20 freely usable "
+"attributes (univentionFreeAttribute1 to univentionFreeAttribute20) and can "
+"be used in connection with any LDAP object (e.g., a user object)"
+msgstr ""
+"Univention Corporate Server bringt ein eigenes LDAP-Schema für "
+"Kundenerweiterungen mit. Die LDAP-Objektklasse univentionFreeAttributes kann "
+"ohne Einschränkungen für erweiterte Attribute verwendet werden. Sie bringt "
+"20 frei zu verwendende Attribute (univentionFreeAttribute1 bis "
+"univentionFreeAttribute20) mit und kann in Verbindung mit jedem beliebigen "
+"LDAP-Objekt (z.B. einem Benutzerobjekt) verwendet werden"
 
 #: extended_attribute.py:268
 msgid "Editable after creation"
@@ -474,12 +490,11 @@ msgstr "Wert wird nur intern verwaltet"
 
 #: extended_attribute.py:279
 msgid ""
-"This extended attribute can not be changed through UMC or UDM CLI, "
-"but only through the Python API or by hooks"
+"This extended attribute can not be changed through UMC or UDM CLI, but only "
+"through the Python API or by hooks"
 msgstr ""
-"Dieses erweiterte Attribut kann nicht über die UMC oder "
-"UDM-CLI geändert werden, sondern nur über die Python API und "
-"Hooks"
+"Dieses erweiterte Attribut kann nicht über die UMC oder UDM-CLI geändert "
+"werden, sondern nur über die Python API und Hooks"
 
 #: extended_attribute.py:289
 msgid "Value required"
@@ -492,21 +507,6 @@ msgstr "Wert ist erforderlich und muss eingegeben werden"
 #: extended_attribute.py:299 extended_options.py:140
 msgid "LDAP object class"
 msgstr "LDAP-Objektklasse"
-
-#: extended_attribute.py:259 extended_attribute.py:300
-msgid ""
-"Univention Corporate Server provides its own LDAP scheme for customer "
-"extensions. The LDAP object class univentionFreeAttributes can be used "
-"for extended attributes without restrictions. It offers 20 freely usable "
-"attributes (univentionFreeAttribute1 to univentionFreeAttribute20) and "
-"can be used in connection with any LDAP object (e.g., a user object)"
-msgstr ""
-"Univention Corporate Server bringt ein eigenes LDAP-Schema für Kundenerweiterungen mit. Die "
-"LDAP-Objektklasse univentionFreeAttributes kann ohne Einschränkungen "
-"für erweiterte Attribute verwendet werden. Sie bringt 20 frei zu "
-"verwendende Attribute (univentionFreeAttribute1 bis "
-"univentionFreeAttribute20) mit und kann in Verbindung mit jedem beliebigen "
-"LDAP-Objekt (z.B. einem Benutzerobjekt) verwendet werden"
 
 #: extended_attribute.py:309
 msgid "Remove object class if the attribute is removed"
@@ -545,11 +545,8 @@ msgid "UDM CLI name"
 msgstr "UDM-CLI Name"
 
 #: extended_attribute.py:341
-msgid ""
-"The name for the extended attribute as used by UDM CLI"
-msgstr ""
-"Der vom UDM-CLI zu verwendende Name für dieses erweiterte "
-"Attribut"
+msgid "The name for the extended attribute as used by UDM CLI"
+msgstr "Der vom UDM-CLI zu verwendende Name für dieses erweiterte Attribut"
 
 #: extended_attribute.py:351
 msgid "Required options/object classes"
@@ -564,12 +561,14 @@ msgstr ""
 "aktiviert ist, z.B. \"posix\" oder \"samba\""
 
 #: extended_attribute.py:361
-msgid "Exclude from search"
-msgstr "Von der Suche ausschließen"
+msgid "Exclude from UMC search"
+msgstr "Von der UMC-Suche ausschließen"
 
 #: extended_attribute.py:362
-msgid "Values of this extended attribute are not available for searching"
-msgstr "Nach diesem erweiterten Attribut kann nicht gesucht werden"
+msgid ""
+"Values of this extended attribute are not available for searching "
+"in the UMC"
+msgstr "Nach Werten dieses erweiterten Attributs kann nicht in der UMC gesucht werden"
 
 #: extended_attribute.py:373
 msgid "General settings"
@@ -587,39 +586,41 @@ msgstr "Modul"
 msgid "Settings of the modules to be extended"
 msgstr "Einstellungen der zu erweiternden Module"
 
-#: extended_attribute.py:392
+#: extended_attribute.py:391
 msgid "LDAP mapping"
 msgstr "LDAP-Abbildung"
 
-#: extended_attribute.py:392
+#: extended_attribute.py:391
 msgid "Configuration of the LDAP settings used to store the extended attribute"
-msgstr "Konfiguration der zur Speicherung des erweiterten Attributs verwendeten LDAP-Einstellungen"
+msgstr ""
+"Konfiguration der zur Speicherung des erweiterten Attributs verwendeten LDAP-"
+"Einstellungen"
 
-#: extended_attribute.py:396
+#: extended_attribute.py:395
 msgid "UMC"
 msgstr "UMC"
 
-#: extended_attribute.py:396
-msgid "Settings for UMC web layout"
+#: extended_attribute.py:395
+msgid "Settings for UMC"
 msgstr "UMC-spezifische Einstellungen"
 
-#: extended_attribute.py:398
+#: extended_attribute.py:397
 msgid "Attribute layout"
 msgstr "Attributdarstellung"
 
-#: extended_attribute.py:402
+#: extended_attribute.py:401
 msgid "Tab layout"
 msgstr "Karteikartendarstellung"
 
-#: extended_attribute.py:407
+#: extended_attribute.py:406
 msgid "Group layout"
 msgstr "Gruppendarstellung"
 
-#: extended_attribute.py:413
+#: extended_attribute.py:412
 msgid "Data type"
 msgstr "Datentyp"
 
-#: extended_attribute.py:413
+#: extended_attribute.py:412
 msgid "Data type definition"
 msgstr "Datentyp-Definition"
 
